--- a/templates/forms.html
+++ b/templates/forms.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="stylesheet" href="/static/css/base.css">
     <title>Form</title>
 </head>
 <body>
     <form method="post" id="forms"></form>
-    <input type="button" id="submit-btn" value="Enviar">
+    <input type="button" id="submit-btn" value="Enviar" >
+    <div id="gabarito-palace">
+
+    </div>
     <script type="module" src="static/scripts/index.js" ></script>
 </body>
 </html>
