Created a easier way to see awnsers
There is now a enumerated list of the exercises that go red or right depending on if it's wrong or right.

--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -30,3 +30,12 @@
 .wrong{
     background-color: #ff000080;
 }
+#awnser-list{
+    display: flex;
+}
+.awnser-list-object{
+    font-family: Arial, Helvetica, sans-serif;
+    padding-inline: 10px;
+    border: 2px solid #000000;
+    text-align: center;
+}
