--- a/src/templates/forms.html
+++ b/src/templates/forms.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <form method="post" id="forms"></form>
-    <input type="button" id="submit-btn" value="Enviar" >
+    <div id="awnser-list">
+        <input type="button" id="submit-btn" value="Enviar" >
+    </div>
     <script type="module" src="static/scripts/index.js" ></script>
 </body>
 </html>
